--- a/petitpal/analysis_options.yaml
+++ b/petitpal/analysis_options.yaml
@@ -1,1 +1,8 @@
 include: package:flutter_lints/flutter.yaml
+
+linter:
+  rules:
+    - always_declare_return_types
+    - avoid_print
+    - cancel_subscriptions
+    - close_sinks
