--- a/petitpal/pubspec.yaml
+++ b/petitpal/pubspec.yaml
@@ -1,38 +1,45 @@
 name: petitpal
-description: Voice-first assistant for seniors with Cloudflare Worker backend
-publish_to: "none"
-version: 1.0.1+2
+description: Voice-first assistant for adults 65+
+publish_to: 'none'
+version: 1.0.0+1
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.5.1
-  shared_preferences: ^2.5.3
-  flutter_secure_storage: ^9.2.4
+  
+  # State Management
+  flutter_riverpod: ^2.4.9
+  
+  # Voice & Speech
+  speech_to_text: ^7.3.0
+  flutter_tts: ^4.1.0
+  permission_handler: ^12.0.1
+  
+  # Storage & Preferences
+  shared_preferences: ^2.2.2
+  
+  # HTTP & API
   http: ^1.2.2
-  uuid: ^4.4.0
-  permission_handler: ^11.3.1
-  app_links: ^6.3.2
-  url_launcher: ^6.3.0
-  speech_to_text: ^7.1.0
-  flutter_tts: ^3.8.3
-  qr_flutter: ^4.1.0
-  mobile_scanner: ^5.1.1
-  flutter_animate: ^4.5.0
-  simple_animations: ^5.0.2
-  intl: ^0.19.0
-  cryptography: ^2.7.0
-  sentry_flutter: ^8.7.0
+  
+  # Deep Links & Sharing
+  app_links: ^6.4.1
+  share_plus: ^7.2.2
+  
+  # UI & Animations
+  flutter_animate: ^4.5.2
+  
+  # Utilities
+  uuid: ^4.5.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/sounds/
