--- a/petitpal/pubspec.yaml
+++ b/petitpal/pubspec.yaml
@@ -12,7 +12,12 @@ dependencies:
     sdk: flutter
   
   # State Management
-  flutter_riverpod: ^2.4.9
+  flutter_riverpod: ^2.5.1
+  
+  # Firebase (Analytics & Crashlytics) - VERIFIED COMPATIBLE VERSIONS
+  firebase_core: ^3.15.2
+  firebase_analytics: ^11.3.0  
+  firebase_crashlytics: ^4.3.6
   
   # Voice & Speech
   speech_to_text: ^7.3.0
@@ -20,7 +25,7 @@ dependencies:
   permission_handler: ^12.0.1
   
   # Storage & Preferences
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.3.3
   
   # HTTP & API
   http: ^1.2.2
@@ -28,6 +33,9 @@ dependencies:
   # Deep Links & Sharing
   app_links: ^6.4.1
   share_plus: ^7.2.2
+  
+  # Device Information
+  device_info_plus: ^10.1.0
   
   # UI & Animations
   flutter_animate: ^4.5.2
@@ -43,3 +51,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+  # Assets for JSON-driven themes and configuration
+  assets:
+    - assets/themes/
+    - assets/config/
+    - assets/audio/
