--- a/petitpal/pubspec.yaml
+++ b/petitpal/pubspec.yaml
@@ -11,13 +11,14 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   http: ^1.2.2
+  speech_to_text: ^7.3.0
   flutter_tts: ^3.8.3
   record: ^5.1.2
+  audioplayers: ^6.1.0
   path_provider: ^2.1.4
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.2.3
   permission_handler: ^11.3.1
-  audioplayers: ^5.2.1
   uuid: ^4.4.0
 
 dependency_overrides:
