--- a/.gitignore
+++ b/.gitignore
@@ -1,70 +1,6 @@
-# ========================
-# Flutter & Dart
-# ========================
-**/build/
-**/.dart_tool/
-**/.flutter-plugins
-**/.flutter-plugins-dependencies
-**/.packages
-**/pubspec.lock
-**/.idea/
-**/.vscode/
 
-# ========================
-# Android
-# ========================
-**/android/.gradle/
-**/android/captures/
-**/android/local.properties
-**/android/key.properties
-**/android/app/google-services.json
+# Local dev settings (do not commit)
+petitpal/lib/dev_settings.dart
 
-# ========================
-# iOS
-# ========================
-**/ios/Pods/
-**/ios/Runner/GoogleService-Info.plist
-**/ios/Flutter/Flutter.framework
-**/ios/Flutter/Flutter.podspec
-
-# ========================
-# Cloudflare Worker
-# ========================
-cloudflare-worker/.wrangler/
-cloudflare-worker/.dev.vars
-cloudflare-worker/.env
-cloudflare-worker/.env.local
-cloudflare-worker/.env.production
-cloudflare-worker/.env.*
-cloudflare-worker/node_modules/
-cloudflare-worker/dist/
-cloudflare-worker/wrangler.toml # may contain account IDs or bindings in prod
-
-# ========================
-# Sensitive Config
-# ========================
-*.env
-*.env.*
-**/lib/config/internal_config.dart
-**/lib/config/secrets.dart
-**/keystore.*
-**/keys_backup.json
-sentry.properties
-
-# ========================
-# Logs & OS Files
-# ========================
-*.log
-.DS_Store
-Thumbs.db
-
-# ========================
-# Generated Docs/Builds
-# ========================
-docs/generated/
-
-# ========================
-# Generated PDFs (keep if only safe diagrams/text)
-# ========================
-docs/*.pdf
-!docs/TECHNICAL_IMPLEMENTATION.pdf  # safe to commit (template-based, no secrets)
+# All zip files (do not commit)
+*.zip
