--- a/petitpal/pubspec.yaml
+++ b/petitpal/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   audioplayers: ^6.1.0
   uuid: ^4.4.0
   speech_to_text: ^7.3.0
+  google_fonts: ^6.2.1
+  url_launcher: ^6.3.0
 
 dependency_overrides:
   record_linux: ^1.1.0
