--- a/petitpal/pubspec.yaml
+++ b/petitpal/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  home_widget: ^0.6.0 # Home screen widgets (Android/iOS)
   flutter_riverpod: ^2.5.1
   http: ^1.2.2
   flutter_tts: ^3.8.3
@@ -22,6 +23,10 @@ dependencies:
   speech_to_text: ^7.3.0
   google_fonts: ^6.2.1
   url_launcher: ^6.3.0
+  
+  # Animations
+  dynamic_background: ^0.5.0
+
 
 dependency_overrides:
   record_linux: ^1.1.0
